# skyline

./: README.md
skyline_ws/.catkin_tools/profiles/default/: devel_collisions.txt
skyline_ws/src/simulator_pkg/: CMakeLists.txt  skyline.rviz
skyline_ws/src/simulator_pkg/config/: joint_trajectory_controller.yaml
skyline_ws/src/simulator_pkg/launch/: skyline.launch
skyline_ws/src/simulator_pkg/urdf/: skyline.urdf  skyline.urdf.xacro
skyline_ws/src/skyline_urdf/: CMakeLists.txt  package.xml
skyline_ws/src/skyline_urdf/config/: joint_names_skyline_urdf.yaml  joint_trajectory_controller.yaml
skyline_ws/src/skyline_urdf/launch/: display.launch  gazebo.launch  skyline_sim.launch
skyline_ws/src/skyline_urdf/meshes/: base_link.STL  end_effector_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
skyline_ws/src/skyline_urdf/urdf/: skyline_urdf.csv  skyline_urdf.urdf  skyline_urdf.urdf.xacro
